--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,27 +1,62 @@
-# This file configures the analyzer to use the lint rule set from `package:lint`
-
-# For apps, use the default set
-include: package:lint/analysis_options.yaml
-
-# Packages, that may be distributed (i.e. via pub.dev) should use the package
-# version, resulting in a better pub score.
-# include: package:lint/analysis_options_package.yaml
-
-# You might want to exclude auto-generated files from dart analysis
 analyzer:
+  plugins:
+    # - lints
+    - dart_code_metrics
+  errors:
+    # treat missing required parameters as a warning (not a hint)
+    missing_required_param: warning
+    # treat missing returns as a warning (not a hint)
+    missing_return: warning
+    # allow having TODO comments in the code
+    todo: ignore
+    # allow self-reference to deprecated members (we do this because otherwise we have
+    # to annotate every member in every test, assert, etc, when we deprecate something)
+    deprecated_member_use_from_same_package: ignore
+    # TODO(ianh): https://github.com/flutter/flutter/issues/74381
+    # Clean up existing unnecessary imports, and remove line to ignore.
+    unnecessary_import: ignore
+    # Turned off until null-safe rollout is complete.
+    unnecessary_null_comparison: ignore
+    argument_type_not_assignable: ignore
+    avoid_dynamic_calls: ignore
   exclude:
-    #- '**.freezed.dart'
+    - "bin/cache/**"
+    - "dev/conductor/lib/proto/*"
+    - "lib/**.g.dart"
 
-# You can customize the lint rules set to your own liking. A list of all rules
-# can be found at https://dart-lang.github.io/linter/lints/options/options.html
-linter:
+# dart pub add --dev dart_code_metrics
+# dart pub add --dev dart_code_metrics_presets
+dart_code_metrics:
+  extends:
+    - package:dart_code_metrics_presets/all.yaml
+  anti-patterns:
+    - long-method
+    - long-parameter-list
+  metrics:
+    cyclomatic-complexity: 20
+    halstead-volume: 150
+    lines-of-code: 100
+    maintainability-index: 50
+    maximum-nesting-level: 5
+    number-of-methods: 10
+    number-of-parameters: 4
+    source-lines-of-code: 50
+    technical-debt:
+      threshold: 1
+      todo-cost: 161
+      ignore-cost: 320
+      ignore-for-file-cost: 396
+      as-dynamic-cost: 322
+      deprecated-annotations-cost: 37
+      file-nullsafety-migration-cost: 41
+      unit-type: "USD"
+    weight-of-class: 0.33
+  metrics-exclude:
+    - test/**
   rules:
-    # Util classes are awesome!
-    # avoid_classes_with_only_static_members: false
-
-    # Make constructors the first thing in every class
-    # sort_constructors_first: true
-
-    # Choose wisely, but you don't have to
-    # prefer_double_quotes: true
-    # prefer_single_quotes: true
+    - arguments-ordering:
+        child-last: true
+    - prefer-match-file-name:
+        exclude:
+          - test/**v
+    - avoid-ignoring-return-values: false
